--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=Matrimony
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:p6HBMDAycErgLClR+qx84d0AMGO3yLVYD1DWwDiAUtI=
 APP_DEBUG=true
 APP_URL=http://localhost
 APP_PROJECT_VERSION=8
@@ -10,7 +10,7 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=matrimonial
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -18,18 +18,20 @@ BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
-QUEUE_DRIVER=sync
+QUEUE_DRIVER=database
+QUEUE_CONNECTION=database
+
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_HOST=smtp.googlemail.com
+MAIL_PORT=567
+MAIL_USERNAME=rajat@vocso.com
+MAIL_PASSWORD=harsharajat
+MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS=null
 MAIL_FROM_NAME="${APP_NAME}"
 
@@ -53,7 +55,7 @@ PUSHER_APP_CLUSTER=
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-ACTIVATION=true
+ACTIVATION=false
 ACTIVATION_LIMIT_TIME_PERIOD=24
 ACTIVATION_LIMIT_MAX_ATTEMPTS=3
 NULL_IP_ADDRESS=0.0.0.0
@@ -158,19 +160,19 @@ GOOGLEMAPS_API_STATUS=true
 GOOGLEMAPS_API_KEY=YOURGOOGLEMAPSkeyHERE
 
 # https://www.google.com/recaptcha/admin#list
-ENABLE_RECAPTCHA=true
+ENABLE_RECAPTCHA=false
 RE_CAP_SITE=YOURGOOGLECAPTCHAsitekeyHERE
 RE_CAP_SECRET=YOURGOOGLECAPTCHAsecretHERE
 
 # https://console.developers.google.com/ - NEED OAUTH CREDS
-GOOGLE_ID=YOURGOOGLEPLUSidHERE
-GOOGLE_SECRET=YOURGOOGLEPLUSsecretHERE
-GOOGLE_REDIRECT=https://YOURWEBURLHERE.COM/social/handle/google
+GOOGLE_ID=459802651658-kppqg100bdojun4j26mavjvru2q1ph08.apps.googleusercontent.com
+GOOGLE_SECRET=FkDW2WkVgBwQfn3ycz6YkhJ-
+GOOGLE_REDIRECT=https://matrimony.clcbws.xyz/social/handle/google
 
 # https://developers.facebook.com/
-FB_ID=YOURFACEBOOKidHERE
-FB_SECRET=YOURFACEBOOKsecretHERE
-FB_REDIRECT=https://YOURWEBURLHERE.COM/social/handle/facebook
+FB_ID=498290924594838
+FB_SECRET=3e996e2aadf4703a0b43347f9599a7aa
+FB_REDIRECT=https://matrimony.clcbws.xyz/social/handle/facebook
 
 # https://apps.twitter.com/
 TW_ID=YOURTWITTERidHERE
